--- a/templates/notify/main.html.twig
+++ b/templates/notify/main.html.twig
@@ -19,7 +19,7 @@
                     <div class="card-grid">
                         <div class="expanded_card">
                             <p class="label">Fecha:</p>
-                            <p class="value">{{ absence.absenceDate | date('Y-m-d') }}</p>
+                            <p class="value">{{ absence.absenceDate | date('d-m-Y') }}</p>
                         </div>
                     </div>
                 </div>
