--- a/templates/emails/absence_notification.html.twig
+++ b/templates/emails/absence_notification.html.twig
@@ -12,6 +12,7 @@
             margin: 0;
             padding: 0;
         }
+
         .container {
             max-width: 600px;
             margin: 0 auto;
@@ -20,22 +21,28 @@
             border-radius: 8px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         }
+
         .header {
             text-align: center;
             padding-bottom: 20px;
         }
+
         .header img {
             max-width: 150px;
         }
+
         .content {
             line-height: 1.6;
         }
+
         .content h1 {
             color: #333333;
         }
+
         .content p {
             margin: 0 0 20px;
         }
+
         .footer {
             text-align: center;
             padding-top: 20px;
@@ -49,7 +56,12 @@
     <div class="content">
         <h1>Notificación de Nueva Ausencia</h1>
         <p>Estimado/a {{ group_admin_name }},</p>
-        <p>Se ha registrado una nueva ausencia del conductor {{ driver_name }}. A continuación, se detallan los datos de la ausencia:</p>
+        <p>Se ha registrado una nueva ausencia del conductor {{ driver_name }} perteneciente al
+            grupo/s
+            {% for group in driver_groups %}
+                <strong>{{ group.name }}</strong>
+            {% endfor %}
+            . A continuación, se detallan los datos de la ausencia:</p>
         <p><strong>Fecha:</strong> {{ start_date }}</p>
         <p><strong>Razón:</strong> {{ reason }}</p>
         <p>Por favor, tome las medidas necesarias para gestionar esta ausencia.</p>
