--- a/templates/schedule/main.html.twig
+++ b/templates/schedule/main.html.twig
@@ -51,7 +51,7 @@
                 <div class="button_container">
                     <a href="{{ path('schedule_update', {'id':app.user.driver.id}) }}" class="primaryButton"><i
                                 class="ti ti-edit"></i>Modificar</a>
-                    <a href="{{ path('user_panel') }}" class="secondaryButton"><i
+                    <a href="{{ path('main') }}" class="secondaryButton"><i
                                 class="ti ti-arrow-left"></i>Volver</a>
                 </div>
             </div>
