--- a/templates/security/change_password.html.twig
+++ b/templates/security/change_password.html.twig
@@ -5,7 +5,7 @@
             <h2 class="titulo">Cambio de contraseña</h2>
             {{ form_start(form) }}
             {{ form_row(form) }}
-            <div class="buttons">
+            <div class="button_container">
                 <button type="submit" class="primaryButton">Guardar</button>
                 <a href="{{ path('main') }}" class="secondaryButton"><i class="ti ti-arrow-left"></i>Volver</a>
             </div>
