--- a/templates/non_school_day/modificar.html.twig
+++ b/templates/non_school_day/modificar.html.twig
@@ -10,7 +10,7 @@
             {% endif %}
             {{ form_start(form) }}
             {{ form_widget(form) }}
-            <div class="buttons">
+            <div class="button_container">
                 <button type="submit" class="primaryButton">Guardar</button>
             </div>
             {{ form_end(form) }}
