--- a/templates/notify/modificar.html.twig
+++ b/templates/notify/modificar.html.twig
@@ -23,7 +23,7 @@
 			{{ form_widget(form.absenceDate) }}
 			{{ form_errors(form.absenceDate) }}
 			
-			<div class="buttons">
+			<div class="button_container">
 				<button type="submit" class="primaryButton">Guardar</button>
 			</div>
 			
