--- a/templates/users/main.html.twig
+++ b/templates/users/main.html.twig
@@ -3,25 +3,24 @@
     <div class="container">
         <div class="button_container">
             <a href="{{ path('driver_new') }}" class="primaryButton">
-                <i class="ti ti-plus"></i>Nuevo conductor</a>
+                <i class="ti ti-plus"></i>Nuevo </a>
         </div>
         <div class="card_container">
             {% for driver in pagination %}
                 <div class="expandable-container">
                     <div class="expandable">
-						<span class="title">{{ driver.name }}
-                            {{ driver.lastName }}</span>
+                        <img src="{{ asset('images/avatar.png') }}" alt='Avatar' class='avatar'>
+                        <span class="title">{{ driver.name }} {{ driver.lastName }}</span>
                         <div class="icons">
-                            <a href="{{ path('driver_mod', {'id': driver.id, 'redirect': app.request.uri}) }}"
-                               class="btn edit">
+                            <a href="{{ path('driver_mod', {'id': driver.id, 'redirect': app.request.uri}) }}" class="btn edit">
                                 <i class="ti ti-edit" style="font-size: 1.5rem"></i>
                             </a>
                             <a href="#" class="btn delete" onclick="confirmDelete({{ driver.id }})">
                                 <i class="ti ti-trash" style="font-size: 1.5rem"></i>
                             </a>
                             <span class="icon">
-								<i class="ti ti-caret-down-filled" style="font-size: 1.5rem"></i>
-							</span>
+                                <i class="ti ti-caret-down-filled" style="font-size: 1.5rem"></i>
+                            </span>
                         </div>
                     </div>
                     <div class="content">
@@ -38,11 +37,9 @@
                                 <p class="label">Tiempo de espera:</p>
                                 <p class="value">
                                     {% if driver.waitTime == 1 %}
-                                        {{ driver.waitTime }}
-                                        hora
+                                        {{ driver.waitTime }} hora
                                     {% else %}
-                                        {{ driver.waitTime }}
-                                        horas
+                                        {{ driver.waitTime }} horas
                                     {% endif %}
                                 </p>
                             </div>
@@ -55,7 +52,7 @@
                 </div>
             {% endfor %}
         </div>
-        {# display navigation #}
+        <!-- display navigation -->
         <div class="paginator">
             {{ knp_pagination_render(pagination) }}
         </div>
