--- a/templates/users/main.html.twig
+++ b/templates/users/main.html.twig
@@ -3,7 +3,7 @@
     <div class="container">
         <div class="button_container">
             <a href="{{ path('driver_new') }}" class="primaryButton">
-                <i class="ti ti-plus"></i>Nuevo </a>
+                <i class="ti ti-plus"></i>Nuevo conductor</a>
         </div>
         <div class="card_container">
             {% for driver in pagination %}
