--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -66,6 +66,22 @@ body::before {
     margin-top: 3rem;
     width: 100%;
 }
+.section_trips{
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 20px;
+    margin-top: 3rem;
+    width: 50%;
+}
+.trips{
+    border-radius: 5px;
+    background-color: var(--back-color);
+    padding: 2rem;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 15px;
+    color: white;
+}
 .section:first-child{
     background-color: var(--back-color);
     padding: 2rem;
